--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <body>
 
-<h2>CDAC Registraion From</h2>
+<h2>Sourabh_CDAC Registraion From</h2>
 
 <form action="/action_page.php">
-  <label for="fname">Enter your First name:</label><br>
+  <label for="fname">Enter your First name:</sourabh><br>
   <input type="text" id="fname" name="fname" value="John"><br>
-  <label for="lname">Enter your Last name:</label><br>
+  <label for="lname">Enter your Last name:</Patill><br>
   <input type="text" id="lname" name="lname" value="Doe"><br><br>
   <input type="submit" value="Submit">
 </form> 
