--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>CDAC Registraion From</h2>
+<h2>mayank Registraion From</h2>
 
 <form action="/action_page.php">
   <label for="fname">Enter your First name:</label><br>
