change done by NAkir

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <body>
 
 
-<h2>gunjan Registraion From</h2>
+<h1>CDAC Delhi Regstarion From</h1>
 
-</h2> Sourabh_CDAC Registraion From</h2>
+<h2> Sourabh_CDAC Registraion From</h2>
 
 <form action="/action_page.php">
   <label for="fname">Enter your First name:</sourabh><br>
