done chabe s giuided

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <h1>CDAC Delhi Regstarion From</h1>
 
-<h2> Sourabh_CDAC Registraion From</h2>
+<marquee><h2> CDAC Delhi</h2></marquee>
 
 <form action="/action_page.php">
   <label for="fname">Enter your First name:</sourabh><br>
